--- a/tictactoe.html
+++ b/tictactoe.html
@@ -2,10 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name = "viewport" content="width=device-width,
+    initial-scale=1.0, user-scalable=1, minimum-scale=1.0,
+    maximum-scale=1.0">
+
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 
     <script src="jquery.js"></script>
     <script src="tictactoe.js"></script>
@@ -18,9 +22,12 @@
 
   <body>
 
+
     <div class= "title">
       <p> Tic Tac Toe  </p>
-     <button class = "resetButton">  Click to Play again! </button>
+      <!-- <input type="button" class = "resetButton" value="Click to Play Again" onclick="window.location.reload()"> -->
+
+     <button class = "resetButton" onclick="window.location.reload()">  Click to Play again! </button>
   </div>
 
     <table class = "gameOver">
